# VideoDemo

./: build.gradle  custom.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/doc/: externaltool-cfg.txt
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  (+2 more)
doc/: viewmodel.txt
gradle/wrapper/: gradle-wrapper.properties
myjetpack/: build.gradle
myjetpack/src/main/: AndroidManifest.xml
mylibrary/: CMakeLists.txt  build.gradle
onedayproject/: CMakeLists.txt  build.gradle
onedayproject/doc/: cmake-cfg.txt  event-dispatch.txt  externaltool-cfg.txt
onedayproject/src/main/: AndroidManifest.xml
onedayproject/src/main/java/com/oneday/videodemo/: MainActivity.java  Test.java
onedayproject/src/main/java/com/oneday/videodemo/algorithm/: AlgorithmManager.java
onedayproject/src/main/java/com/oneday/videodemo/collection/: collection.txt
onedayproject/src/main/java/com/oneday/videodemo/dispatchevent/: TestDispatchActivity.java  TestDispatchViewGroup.java
onedayproject/src/main/java/com/oneday/videodemo/exeception/: exception.txt
onedayproject/src/main/java/com/oneday/videodemo/generic/: generic.txt
onedayproject/src/main/java/com/oneday/videodemo/jni/: JniInterface.java
onedayproject/src/main/java/com/oneday/videodemo/model/: ItemModel.java
onedayproject/src/main/java/com/oneday/videodemo/recyclerviewdemo/: CommonAdapter.java  ViewHolder.java
onedayproject/src/main/java/com/oneday/videodemo/reflect/: ResultType.java  TestClass.java
onedayproject/src/main/java/com/oneday/videodemo/util/: DateUtil.java  LogContants.java
onedayproject/src/main/java/com/oneday/videodemo/video/: Square.java  TestGlSurfaceView.java  TestRender.java  Triangle.java  VideoActivity.java
onedayproject/src/main/java/com/oneday/videodemo/view/: CustomViewActivity.java  DrawArcView.java  DrawCircleView.java  GlobalWindowUtil.java  PageFragment.java
onedayproject/src/main/jni/: Application.mk  JniInterface.cpp  android_log.h  com_oneday_videodemo_jni_JniDemo.h  com_oneday_videodemo_jni_JniInterface.h
onedayproject/src/main/res/layout/: activity_main.xml  activity_main_item.xml  layout_draw_arc_view.xml  layout_draw_color_view.xml  sample_color.xml
onedayproject/src/main/res/values/: dimens.xml  strings.xml  styles.xml
onedayproject/src/test/java/com/oneday/videodemo/: TestTest.java
onedayproject/src/test/java/com/oneday/videodemo/util/: DateUtilTest.java
(+51 files in other folders)
